--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -327,6 +327,33 @@ footer .btn-primary {
   width: 35px;
 }
 
+/* scrollTOp */
+
+.scroll-top {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: var(--lighter);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: 999;
+  animation: slideLeft 0.3s;
+}
+@keyframes slideLeft {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
 @media (max-width: 942px) {
   .hide-header {
     display: none !important;
